@@ -1,6 +1,6 @@
 # building tests
 #------------------
-cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.10.0 FATAL_ERROR)
 #
 if (${CMAKE_VERSION} VERSION_GREATER "3.8")
   cmake_policy(SET CMP0069 NEW)
